# page-loader

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  pyci.yml
page_loader/: __init__.py  cli.py  engine.py  files.py  log.py  logging.py  page.py  paths.py  utils.py  values.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: conftest.py  test_engine.py  test_files.py  test_page.py  test_page_download.py  test_paths.py  test_values.py
tests/fixtures/: andrka-github-io-page-loader-test.html  original_page.html  result.html  test.html
tests/fixtures/andrka-github-io-page-loader-test_files/: assets-styles-app.css
tests/fixtures/expected/: page-loader-test-.html
tests/fixtures/full_result/: andrka-github-io-page-loader-test-.html  andrka-github-io-page-loader-test.html
