[tool.poetry]
name = "Andrka-page-loader"
version = "0.3.0"
description = "Page loader"
authors = ["Andrka <postbox4mail@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
