[tool.poetry]
name = "Andrka-page-loader"
version = "0.8.0"
description = "Page loader"
authors = ["Andrka <postbox4mail@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
requests_mock = "^1.8.0"
flake8 = "^3.9.0"
isort = "^5.8.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
